# snorer

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
dev/: dry.ipynb  haloSpike.ipynb
docs/: 404.html  index.html  search.html
docs/api/constants/Constants/: index.html
docs/api/geometry/Geometry/: index.html
docs/api/geometry/Positioning/: index.html
docs/api/geometry/Propagation/: index.html
docs/api/halo/HaloSpike/: index.html
docs/api/halo/M_sigma/: index.html
docs/api/halo/nx/: index.html
docs/api/halo/nxSpike/: index.html
docs/api/halo/radiusInfluence/: index.html
docs/api/halo/radiusSchwarzschild/: index.html
docs/api/halo/rhox/: index.html
docs/api/kinematics/22scat/: index.html
docs/api/kinematics/KallenLambda/: index.html
docs/api/kinematics/Kinematics/: index.html
docs/api/kinematics/Mandelstam/: index.html
docs/api/kinematics/Neutrino/: index.html
docs/api/kinematics/get_gx/: index.html
docs/api/kinematics/get_psiMax/: index.html
docs/api/kinematics/get_thetaMax/: index.html
docs/api/kinematics/get_tvan/: index.html
docs/api/kinematics/get_vx/: index.html
docs/api/main/differential_flux/: index.html
docs/api/main/dsigma_xv/: index.html
docs/api/main/emissivity_jx/: index.html
docs/api/main/event/: index.html
docs/manual/advanced/: index.html
docs/manual/demo/: index.html
docs/manual/emissivity/: index.html
docs/manual/overview/: index.html
docs/manual/tutorial/: index.html
docs/search/: search_index.json
examples/: BDMevent_SK_mx_1keV_sigxv_1e-45_sigxe_1e-45_nospike.txt  BDMflux_mx_1keV_sigxv_1e-45_spike.txt  Flux_LMC_gV_1e-6_gx_1e-2_nospike.txt  tutorial.ipynb
snorer_docs/: mkdocs.yml  references.bib
snorer_docs/docs/: index.md
snorer_docs/docs/dat/: MW_sne.txt
snorer_docs/docs/manual/: advanced.ipynb  advanced.md  demo.md  emissivity.md  overview.md  overview.md.bak.md  tutorial.md
snorer_docs/site/: 404.html  index.html  search.html
snorer_docs/site/manual/: advanced.ipynb  tutorial.ipynb
snorer_docs/site/search/: search_index.json
src/snorer/: __init__.py  constant.py  constants.py  debug.ipynb  geometry.py  halo.py  kinematics.py  params.py  snorerMain.py  sysmsg.py  utils.py
(+77 files in other folders)
