[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snorer"
version = "0.0.0"
description = "Supernova-neutrino-boosted dark matter from our Milky Way"
readme = "README.md"
authors = [{ name = "Yen-Hsun Lin", email = "yenhsun@phys.ncku.edu.tw" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy >= 1.20.0",
    "scipy >= 1.10.0",
    "vegas >= 6.0.1",]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yenhsunlin/snorer"

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

#"README.md" = [
#    "{version}",
#    "{pep440_version}",
#]

"src/snorer/__init__.py" = [
    "{version}",
]

